All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/ServiceMax_Config_Data__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to store details of:
* Configuration Profiles: Identifies a collection of module settings and their values
* Configuration Access: Lists Salesforce users and profiles for a profile
* Setting Values: Profile-specific value for each setting
* Inventory Process Steps: List of inventory process steps
* Field Mappings of Object: Mapping to be used to copy fields between objects
* Expressions</description>
    <label>ServiceMax Config Data</label>
    <nameField>
        <displayFormat>CN-{0000000000}</displayFormat>
        <label>Config Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceMax Config Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>