All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Access_Configuration_Profile__c.field-meta.xml
<CustomField>
    <fullName>Access_Configuration_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to &apos;ServiceMax Configuration Data&apos; object. Record Type &apos;Configuration Profile&apos;. Used in Configuration Access.</description>
    <inlineHelpText>Select the configuration profile for the configuration access</inlineHelpText>
    <label>Access Configuration Profile</label>
    <referenceTo>ServiceMax_Config_Data__c</referenceTo>
    <relationshipLabel>ServiceMax Configuration Access</relationshipLabel>
    <relationshipName>SVMX_Config_Data2</relationshipName>
    <type>Lookup</type>
</CustomField>