All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Access_To__c.field-meta.xml
<CustomField>
    <fullName>Access_To__c</fullName>
    <label>Access To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dispatcher</fullName>
            </value>
            <value>
                <fullName>Technician</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>