All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Specify the action for Stock Update in Inventory Process Step (Increase/Decrease/Set).</description>
    <inlineHelpText>Specify the action for Stock Update in Inventory Process Step (Increase/Decrease/Set).</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Increase</fullName>
            </value>
            <value>
                <fullName>Decrease</fullName>
            </value>
            <value>
                <fullName>Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>