All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>This is to indicate type of field update action.</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Set Value</fullName>
                <default>true</default>
                <label>Set Value</label>
            </value>
            <value>
                <fullName>Set Attribute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>