All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Auto_Sync_Duration2__c.field-meta.xml
<CustomField>
    <fullName>Auto_Sync_Duration2__c</fullName>
    <label>Auto Sync Duration</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>