All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Auto_Sync_Duration_Unit__c.field-meta.xml
<CustomField>
    <fullName>Auto_Sync_Duration_Unit__c</fullName>
    <label>Auto Sync Duration Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
                <default>true</default>
                <label>Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>