All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Button_Size__c.field-meta.xml
<CustomField>
    <fullName>Button_Size__c</fullName>
    <description>Indicates the size of buttons and text in Service Flow Wizard when the wizard is placed in a Salesforce page layout.</description>
    <inlineHelpText>Indicates the size of buttons and text in Service Flow Wizard when the wizard is placed in a Salesforce page layout.</inlineHelpText>
    <label>Button Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>