All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>This field refers to the Class Name in org which will be executed when service run.</description>
    <inlineHelpText>This field refers to the Class Name in org. Currently used to define class name in Scheduled Services</inlineHelpText>
    <label>Class Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>