All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Config_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Profile_Name__c</fullName>
    <description>Name of the configuration profile this setting is linked to.</description>
    <formula>Setting_Configuration_Profile__r.Profile_Name__c</formula>
    <inlineHelpText>Name of the configuration profile this setting is linked to.</inlineHelpText>
    <label>Config Profile Name</label>
    <type>Text</type>
</CustomField>