All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Configuration_Type__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Type__c</fullName>
    <description>Type of Configuration (Global/Group/User)</description>
    <inlineHelpText>Select Type of Configuration.</inlineHelpText>
    <label>Configuration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>HEADER_UPD_ON_PICKING</fullName>
            </value>
            <value>
                <fullName>LINE_UPD_ON_PICKING</fullName>
            </value>
            <value>
                <fullName>HEADER_UPD_ON_SHIP</fullName>
            </value>
            <value>
                <fullName>LINE_UPD_ON_SHIP</fullName>
            </value>
            <value>
                <fullName>DOCUMENT_ATTRIBUTE</fullName>
            </value>
            <value>
                <fullName>PRODUCT_ATTRIBUTE</fullName>
            </value>
            <value>
                <fullName>HEADER_UPD_ON_ENTITLEMENT</fullName>
            </value>
            <value>
                <fullName>LINE_UPD_ON_ENTITLEMENT</fullName>
            </value>
            <value>
                <fullName>HEADER_UPD_ON_ROUTE_CALC</fullName>
            </value>
            <value>
                <fullName>LINE_UPD_ON_ROUTE_CALC</fullName>
            </value>
            <value>
                <fullName>DOCUMENT_LINE_ATTRIBUTE</fullName>
            </value>
            <value>
                <fullName>Custom_View</fullName>
            </value>
            <value>
                <fullName>HEADER_UPD_ON_INVOICE_CASE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>