All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Internal use only</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>