All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Dispatch_Process__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal use only</description>
    <label>Dispatch Process</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>ServiceMax Config Data (Dispatch Process)</relationshipLabel>
    <relationshipName>ServiceMax_Config_Data</relationshipName>
    <type>Lookup</type>
</CustomField>