All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_Type__c</fullName>
    <description>Salesforce Display type of the field name
Data Type of Expression-&gt;Field is stored in this field</description>
    <label>Field Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>