All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Display_Value__c.field-meta.xml
<CustomField>
    <fullName>Display_Value__c</fullName>
    <description>Setting value displayed in User Interface</description>
    <inlineHelpText>The value displayed in UI for the setting.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>