All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Enable_Activity_Tracking_On__c.field-meta.xml
<CustomField>
    <fullName>Enable_Activity_Tracking_On__c</fullName>
    <description>Indicates which of user&apos;s offline activities should be tracked and recorded in ServiceMax offline activity history</description>
    <inlineHelpText>Indicates which of user&apos;s offline activities should be tracked and recorded in ServiceMax offline activity history</inlineHelpText>
    <label>Enable Activity Tracking On</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Login</fullName>
            </value>
            <value>
                <fullName>Create Record</fullName>
            </value>
            <value>
                <fullName>Update Record</fullName>
            </value>
            <value>
                <fullName>Delete Record</fullName>
            </value>
            <value>
                <fullName>Logout</fullName>
            </value>
            <value>
                <fullName>Start Synch</fullName>
            </value>
            <value>
                <fullName>Cancel Synch</fullName>
            </value>
            <value>
                <fullName>Print Report</fullName>
            </value>
            <value>
                <fullName>Export Data</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>