All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Enable_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Enable_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if users of this profile can use the calendar functionality in offline to download/upload events</description>
    <inlineHelpText>Indicates if users of this profile can use the calendar functionality in offline to download/upload events</inlineHelpText>
    <label>Enable Calendar</label>
    <type>Checkbox</type>
</CustomField>