All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Enable_Get_Price__c.field-meta.xml
<CustomField>
    <fullName>Enable_Get_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Get Price</label>
    <type>Checkbox</type>
</CustomField>