All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Enable_Task__c.field-meta.xml
<CustomField>
    <fullName>Enable_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Task</label>
    <type>Checkbox</type>
</CustomField>