All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Enter_Date__c.field-meta.xml
<CustomField>
    <fullName>Enter_Date__c</fullName>
    <description>Internal use only</description>
    <label>Enter Date</label>
    <type>Date</type>
</CustomField>