All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Expression_Rule__c.field-meta.xml
<CustomField>
    <fullName>Expression_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal use only</description>
    <inlineHelpText>Expression Rule</inlineHelpText>
    <label>Expression Rule</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>Rule Expressions</relationshipLabel>
    <relationshipName>ServiceMax_Config_Data2</relationshipName>
    <type>Lookup</type>
</CustomField>