All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/FKey_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>FKey_Name_Field__c</fullName>
    <description>Salesforce API name of the Name-Field in the foreign key object</description>
    <label>Object Name Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>