All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <description>This is to store body/ definition of formula.</description>
    <label>Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>