All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Internal_Value__c.field-meta.xml
<CustomField>
    <fullName>Internal_Value__c</fullName>
    <description>This value would be stored for a setting. This is an internal value for corresponding Display Value.</description>
    <inlineHelpText>This value would be stored for a setting. This is an internal value for corresponding Display Value.</inlineHelpText>
    <label>Internal Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>