All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Inventory_Process__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to ServiceMax Process with Record type Inventory Process.</description>
    <inlineHelpText>Select the Inventory Process for this Inventory Step.</inlineHelpText>
    <label>Inventory Process</label>
    <referenceTo>ServiceMax_Processes__c</referenceTo>
    <relationshipLabel>ServiceMax Inventory Process Steps</relationshipLabel>
    <relationshipName>SVMX_Config_Data</relationshipName>
    <type>Lookup</type>
</CustomField>