All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Is_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_Name_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Name Field?</label>
    <type>Checkbox</type>
</CustomField>