All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location of the next route stop</description>
    <label>Route Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>ServiceMax Config Data</relationshipLabel>
    <relationshipName>ServiceMax_Config_Data</relationshipName>
    <type>Lookup</type>
</CustomField>