All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Lookup_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field_API_Name__c</fullName>
    <description>API Name of the field which holds the ref to  cross object (Ex: FieldName in PartOrderLine which is lookup to WorkDetail/PartsReqLine)</description>
    <label>Lookup Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>