All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Minimum_Level__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Level__c</fullName>
    <label>Minimum Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>