All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <description>This field refers to the org namespace. This can be useful in calling the class defined in the namespace.</description>
    <label>Namespace</label>
    <length>100</length>
    <type>Text</type>
</CustomField>