All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>Enter the API Name for the Object in Inventory Process Step.</description>
    <inlineHelpText>Enter the API Name for the Object in Inventory Process Step.</inlineHelpText>
    <label>Object Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>