All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Operand__c.field-meta.xml
<CustomField>
    <fullName>Operand__c</fullName>
    <description>Internal use only</description>
    <label>Operand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>