All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Internal use only</description>
    <label>Operator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>