All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Parameter_Type__c.field-meta.xml
<CustomField>
    <fullName>Parameter_Type__c</fullName>
    <label>Parameter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Constant</fullName>
            </value>
            <value>
                <fullName>Field Value</fullName>
            </value>
            <value>
                <fullName>ServiceMax Setting</fullName>
            </value>
            <value>
                <fullName>Field Name</fullName>
            </value>
            <value>
                <fullName>Header Field Value</fullName>
            </value>
            <value>
                <fullName>Field Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>