All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Period_Start_On__c.field-meta.xml
<CustomField>
    <fullName>Period_Start_On__c</fullName>
    <description>This field refers to number of days from which Timesheet Header will be created</description>
    <label>Period Start On</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>