All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Preference_2__c.field-meta.xml
<CustomField>
    <fullName>Preference_2__c</fullName>
    <description>Second preference for considering value of source field in field mapping</description>
    <label>Preference 2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>