All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Preference_3__c.field-meta.xml
<CustomField>
    <fullName>Preference_3__c</fullName>
    <description>Third preference for considering value of source field in field mapping</description>
    <label>Preference 3</label>
    <length>150</length>
    <type>Text</type>
</CustomField>