All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Previous_Execution_Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Previous_Execution_Completed_On__c</fullName>
    <description>This field refers to date/ time at which Service&apos;s Last Run completed.</description>
    <label>Previous Execution Completed On</label>
    <type>DateTime</type>
</CustomField>