All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Previous_Execution_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Execution_Status__c</fullName>
    <description>This field refers Service&apos;s Last run status.</description>
    <label>Previous Execution Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>