All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <description>Configuration Profile Name.</description>
    <inlineHelpText>Enter the Configuration Profile Name</inlineHelpText>
    <label>Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>