All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Name__c</fullName>
    <description>Formula field to store Record Type Name.</description>
    <formula>$RecordType.Name</formula>
    <inlineHelpText>Formula field to store Record Type Name.</inlineHelpText>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>