All_Component_DX/force-app/main/default/objects/ServiceMax_Config_Data__c/fields/Remove_Events_Older_Than2__c.field-meta.xml
<CustomField>
    <fullName>Remove_Events_Older_Than2__c</fullName>
    <description>Used by Offline Client. Events and Tasks older than the specified days will be deleted from the local database in Offline Client.</description>
    <inlineHelpText>Remove Events and Tasks older than specified days from the local database in Offline Client .</inlineHelpText>
    <label>Remove Events Older Than</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>